--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 <!-- unnecessary file, however you can still use for comment section, e.g disqus -->
 <script
   src="https://utteranc.es/client.js"
-  repo="username/reponame"
+  repo="vejhawar0/vejhawar0.github.io"
   issue-term="pathname"
   label="✨ comment ✨"
   theme="github-light"
